--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,10 @@ sysinfo.txt
 
 # Builds
 *.apk
+*.aab
 *.unitypackage
+*.keystore
+*.jks
 
 # Crashlytics generated file
 crashlytics-build.properties
-
