--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "com.playsolana.psdk": "https://github.com/playsolana/PlaySolana.Unity-SDK.git#main",
     "com.unity.ai.navigation": "2.0.10",
     "com.unity.collab-proxy": "2.11.3",
     "com.unity.ide.rider": "3.0.39",
     "com.unity.ide.visualstudio": "2.0.26",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.inputsystem": "1.11.2",
     "com.unity.multiplayer.center": "1.0.1",
     "com.unity.render-pipelines.universal": "17.3.0",
     "com.unity.test-framework": "1.6.0",
