--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.playsolana.psdk": "https://github.com/playsolana/PlaySolana.Unity-SDK.git#main",
+    "com.solana.unity-sdk": "https://github.com/magicblock-labs/Solana.Unity-SDK.git#v1.0.0-preview.31",
     "com.unity.ai.navigation": "2.0.10",
     "com.unity.collab-proxy": "2.11.3",
     "com.unity.ide.rider": "3.0.39",
