--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+# Local sound exploration/audit artifacts
+/audio-audit-2026-02-2*/
